<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#072E2E"
    android:weightSum="6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center|right"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:text="@string/screen" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:backgroundTint="#006752"
            android:text="@string/clear"
            android:textColor="#FF5722"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/del"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:backgroundTint="#006752"
            android:text="@string/del"
            android:textColor="#FF5722"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#006752"
            android:text="@string/seven"
            android:textColor="#F8CE00"
            android:textStyle="bold"
            android:textSize="20sp"/>


        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#006752"
            android:text="@string/eight"
            android:textColor="#F8CE00"
            android:textStyle="bold"
            android:textSize="20sp"/>


        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#006752"
            android:text="@string/nine"
            android:textColor="#F8CE00"
            android:textStyle="bold"
            android:textSize="20sp"/>


        <Button
            android:id="@+id/div"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#006752"
            android:text="@string/div"
            android:textColor="#FF5722"
            android:textStyle="bold"
            android:textSize="20sp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#006752"
            android:text="@string/four"
            android:textColor="#F8CE00"
            android:textStyle="bold"
            android:textSize="20sp"/>


        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#006752"
            android:text="@string/five"
            android:textColor="#F8CE00"
            android:textStyle="bold"
            android:textSize="20sp"/>



        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#006752"
            android:text="@string/six"
            android:textColor="#F8CE00"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#006752"
            android:text="@string/multiply"
            android:textColor="#FF5722"
            android:textStyle="bold"
            android:textSize="20sp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#006752"
            android:text="@string/one"
            android:textColor="#F8CE00"
            android:textStyle="bold"
            android:textSize="20sp"/>


        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#006752"
            android:text="@string/two"
            android:textColor="#F8CE00"
            android:textStyle="bold"
            android:textSize="20sp"/>


        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#006752"
            android:text="@string/three"
            android:textColor="#F8CE00"
            android:textStyle="bold"
            android:textSize="20sp"/>


        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#006752"
            android:text="@string/minus"
            android:textColor="#FF5722"
            android:textStyle="bold"
            android:textSize="20sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#006752"
            android:text="@string/dot"
            android:textColor="#F8CE00"
            android:textStyle="bold"
            android:textSize="20sp"/>


        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#006752"
            android:text="@string/zero"
            android:textColor="#F8CE00"
            android:textStyle="bold"
            android:textSize="20sp"/>


        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#006752"
            android:text="@string/equal"
            android:textColor="#F8CE00"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#006752"
            android:text="@string/plus"
            android:textColor="#FF5722"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>